--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
 
 
     <string name="login_ws">login/dologin</string>
-    <string name="ws">http://10.0.0.4:8080/rentmoviews</string>
+    <string name="pref_default_url">http://192.168.43.115:8080/rentmoviews</string>
     <string name="register_ws">register/doRegister</string>
     <string name="add_movie_ws">movies/addMovie</string>
     <string name="update_movie_ws">movies/updateMovie</string>
@@ -49,7 +49,7 @@
     <string name="poster_path">http://image.tmdb.org/t/p/w185//</string>
     <string name="enter_movie_name">Enter a movie name...</string>
     <string name="search_tmdb">Import from TMDB</string>
-    <string name="thumb_url">Thumnail image url</string>
+    <string name="thumb_url">Thumbnail image url</string>
     <string name="delete_movie">Delete movie</string>
     <string name="edit_movie">Edit Movie</string>
     <string name="delete_ws">movies/deleteMovie</string>
@@ -68,4 +68,82 @@
     <string name="return_date">Return Date</string>
     <string name="history_ws">rent/userRents</string>
     <string name="new_movie_category">New movie category</string>
+    <string name="enter_comment">Enter your comment</string>
+    <string name="submit">Submit</string>
+    <string name="comments_ws">comments</string>
+    <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">General</string>
+
+    <string name="pref_title_social_recommendations">Enable social recommendations</string>
+    <string name="pref_description_social_recommendations">Recommendations for people to contact
+        based on your message history
+    </string>
+
+    <string name="pref_title_display_name">Display name</string>
+    <string name="pref_default_display_name">John Smith</string>
+
+    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
+    <string-array name="pref_example_list_titles">
+        <item>Always</item>
+        <item>When possible</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_example_list_values">
+        <item>1</item>
+        <item>0</item>
+        <item>-1</item>
+    </string-array>
+
+    <!-- Example settings for Data & Sync -->
+    <string name="pref_header_data_sync">Data &amp; sync</string>
+
+    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+        <item>-1</item>
+    </string-array>
+
+    <string-array name="list_preference_entries">
+        <item>Entry 1</item>
+        <item>Entry 2</item>
+        <item>Entry 3</item>
+    </string-array>
+
+    <string-array name="list_preference_entry_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="multi_select_list_preference_default_value" />
+
+    <string name="pref_title_system_sync_settings">System sync settings</string>
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifications</string>
+
+    <string name="pref_title_new_message_notifications">New message notifications</string>
+
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="pref_url">Web Service URL</string>
 </resources>
